See also LICENSE.txt

Meta::
  
  Valid for:        SilvaForum 0.1-beta-3 (SVN/Unreleased)
  Author:           Todd Matsumoto, Guido Wesdorp
  Email:            todd@infrae.com
  Last author:      $Author: guido $
  SVN Revision:     $Date: 2007-08-20 23:24:20 +0200 (Mon, 20 Aug 2007) $
  Last modified:    $Rev: 25523 $

HISTORY
=======

0.1-beta-2 (SVN/Unreleased)
--------------------------

* Fixed text formatting to include links, moved replace_links call from the
  view_topic.pt to the format_text methog in view.py.

* Put replace_links method in the view.py for searching and replacing links in
  text area of comments. Also made tests for the method.

* Put back subject field check in view.py. Somehow it got cut in recent
  changes.

* Changed the topic and comment addable priority to 4.

* Changed the configure.zcml priority setting for Silva Forum to 4, to send
  it to the bottom of the addables list in the SMI select pulldown.

* Fixed the _generate_id method which would return 'already used id' with
  id's ending in '___2'.

* Removed old security code triggered with the Ajax version of the forum.

* Fixed the pagination links to not can the add messages. Tweaked the the
  pagination code to be more efficient.

* Put in jump for the preview form on a comment. Now when previewing the 
  comment will jump to the last page, the same page as where it is added.

* forum.css changes, added emoticon preview support to view_forum.pt,
  view_comment.pt subject fields.

* Ah, after reverting to static forms, unicode issue persists.
  Found the error on the preview hidden inputs, and re-wrote those to
  support unicode.

* Reverted to static form in view_topic.pt view.

* Reverted to static form in view_forum.pt view.

* Reversed order of topics newest to oldest. Added jump
  functionality. Found IE issue with Ajax forms.

* Pagination right/leftdouble.gif are not included in Silva 2.0,
  so put them into the www/ of SilvaForum.
