@@ -17,6 +17,14 @@
       />
 
   <browser:page
+      for="Products.SilvaForum.interfaces.IForum"
+      name="include.html"
+      class=".view.ForumView"
+      template="view_include.pt"
+      permission="zope.Public"
+      />
+
+  <browser:page
       for="Products.SilvaForum.interfaces.ITopic"
       name="index.html"
       class=".view.TopicView"
@@ -25,10 +33,26 @@
       />
 
   <browser:page
+      for="Products.SilvaForum.interfaces.ITopic"
+      name="include.html"
+      class=".view.TopicView"
+      template="view_include.pt"
+      permission="zope.Public"
+      />
+
+  <browser:page
       for="Products.SilvaForum.interfaces.IComment"
       name="index.html"
       class=".view.CommentView"
       template="view_comment.pt"
+      permission="zope.Public"
+      />
+
+  <browser:page
+      for="Products.SilvaForum.interfaces.IComment"
+      name="include.html"
+      class=".view.CommentView"
+      template="view_include.pt"
       permission="zope.Public"
       />
  
