@@ -16,6 +16,17 @@ HISTORY
 0.1-beta-2 (SVN/Unreleased)
 --------------------------
 
+* Add a parameter field to the SMI to add a topic, which by default is the
+  document title.
+
+* Put in javascript toggle button for a comment form.
+
+* Backported Marc Petitmermet code source from the SilvaForum-CodeSource branch
+  and added it to Silva Forum code. Added a view_include.pt, and include.css to
+  handle the styles of a Silva Document with comments. Added to the FiveViewable
+  class a switch to check for an 'include' parameter that gets the code source 
+  template.
+
 * Fixed text formatting to include links, moved replace_links call from the
   view_topic.pt to the format_text methog in view.py.
 
